--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
-_conf
+_conf 
+
+/bootstrap/compiled.php
+/vendor
+
+/build/logs
+/build/coverage
+
+/app/tests/_log
+
+composer.phar
+
+.DS_Store
+
+/.idea
+/_ide_helper.php
+
+/app/config/packages
+/public/packages
+
+/node_modules
+
+
+.env
+
+storage/
 
