fixing .gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
+### private conf data ###
 _conf 
-
-/bootstrap/compiled.php
-/vendor
+/config/google.php
 
 /build/logs
 /build/coverage
@@ -18,10 +17,26 @@ composer.phar
 /app/config/packages
 /public/packages
 
-/node_modules
-
-
 .env
 
 storage/
+
+
+### Laravel ###
+vendor/
+node_modules/
+
+# Laravel 4 specific
+bootstrap/compiled.php
+app/storage/
+
+# Laravel 5 & Lumen specific
+bootstrap/cache/
+storage/
+.env.*.php
+.env.php
+.env
+
+# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
+.rocketeer/
 
