Revert "adding test sample code"
This reverts commit 8814df99cff8fbbcabbb2535a657717d4e36bf9b.

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "google/apiclient": "^1.1",
-        "nesbot/carbon": "^1.21",
-        "guzzlehttp/guzzle": "^6.2"
+        "nesbot/carbon": "^1.21"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
