--- a/public/.htaccess
+++ b/public/.htaccess
@@ -32,7 +32,6 @@
     ExpiresByType text/html "access plus 259200 seconds"
 </IfModule>
 
-
 <IfModule mod_headers.c>
 #Set Expires Time
     <FilesMatch "\\.(ico|jpe?g|png|gif|swf|css|js)$">
@@ -44,3 +43,37 @@
         Header unset ETag
         Header unset Last-Modified
 </IfModule>
+
+<IfModule mod_gzip.c>
+    mod_gzip_on Yes
+    mod_gzip_dechunk Yes
+    mod_gzip_item_include file .(html?|txt|css|js|php|pl)$
+    mod_gzip_item_include handler ^cgi-script$
+    mod_gzip_item_include mime ^text/.*
+    mod_gzip_item_include mime ^application/x-javascript.*
+    mod_gzip_item_exclude mime ^image/.*
+    mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+</ifModule>
+
+#Compress text, html, javascript, css, xml
+AddOutputFilterByType DEFLATE text/plain
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE text/xml
+AddOutputFilterByType DEFLATE text/css
+AddOutputFilterByType DEFLATE application/xml
+AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/rss+xml
+AddOutputFilterByType DEFLATE application/javascript
+AddOutputFilterByType DEFLATE application/x-javascript
+
+# Or, Compress certain file types by extension
+<files *.html>
+SetOutputFilter DEFLATE
+</files>
+
+
+
+
+
+
+
